
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;






typedef int uint32_t ;



void pt_cpuid(uint32_t leaf, uint32_t *eax, uint32_t *ebx, uint32_t *ecx,
       uint32_t *edx)
{
 (void) leaf;
 (void) eax;
 (void) ebx;
 (void) ecx;
 (void) edx;
}
